--- a/bio.html
+++ b/bio.html
@@ -94,9 +94,11 @@
 
     <!-- Begin Page Content. -->
     <main role="main" class="container">
+      
       <p>
         Insert a bio and image here. Yolande Harris teaches at SJSU ...
       </p>
+      <img src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2FKakaoTalk_Photo_2016-07-17-00-48-30.jpeg?v=1636612880932" width="100%">
     </main>
     <!-- End Page Content. -->
 
