--- a/bio.html
+++ b/bio.html
@@ -96,7 +96,7 @@
     <main role="main" class="container">
       
       <p>
-        Insert a bio and image here. Yolande Harris teaches at SJSU ...
+        Soin An is a junior s
       </p>
       <img src="https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2FKakaoTalk_Photo_2016-07-17-00-48-30.jpeg?v=1636612880932" width="100%">
     </main>
