🍙👵 Checkpoint ./bio.html:38505739/18 ./portfolio/works.html:38505739/22

--- a/bio.html
+++ b/bio.html
@@ -162,7 +162,7 @@
             /></a>
           
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+            <a  class="active" href="/portfolio/works.html" style="text-decoration: none"
               >WORKS</a
             >
           </li>
