--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -162,7 +162,7 @@
             /></a>
           
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+            <a  class="active" href="/portfolio/works.html" style="text-decoration: none"
               >WORKS</a
             >
           </li>
