--- a/bio.html
+++ b/bio.html
@@ -133,7 +133,9 @@
       font-size: 16px; /* Increased text to enable scrolling */
       padding: 0px 10px;
     }
-
+ .active {
+      color: #006241;
+    }
     @media screen and (max-height: 450px) {
       .sidenav {
         padding-top: 15px;
