--- a/bio.html
+++ b/bio.html
@@ -218,6 +218,16 @@
         />
       </div>
     </div>
+      
+      <p>
+        My most recent work was with Whos's Down. which is a Real time meet-up Social Media Mobile Application and I designed branding, preview images and icons. I also have experience as a front end website designer at e-commercial start up company in LA. Having responsibility as a front end designer for four years taught me how to balance time and workload and self-taught important skills.
+
+I am currently attending San Jose State University and pursuing Digital Media Design major. I learn how to communicate with user interface design and art of coding and I applied it to my second mobile application project I am working on.
+
+I grew up in 3 different countries which is South Korea, Malaysia and United States. I believe diverse experience can be embraced with art. I realized how much I love human-centered design through experience of studying Architecture for two years. The process of understanding user experience was similar to Interaction design.
+
+My second love is 3 cats in my house and authentic food. You might find me wondering for new tastes in Bay Area every weekend.
+      </p>
        </main>
 
     <!--bootsratp-->
