🌹💕 Checkpoint ./bio.html:38505739/53

--- a/bio.html
+++ b/bio.html
@@ -219,7 +219,8 @@
       </div>
     </div>
       
-      <p>
+      <p> I'm Soin An. An interaction Designer from San Jose.
+
         My most recent work was with Whos's Down. which is a Real time meet-up Social Media Mobile Application and I designed branding, preview images and icons. I also have experience as a front end website designer at e-commercial start up company in LA. Having responsibility as a front end designer for four years taught me how to balance time and workload and self-taught important skills.
 
 I am currently attending San Jose State University and pursuing Digital Media Design major. I learn how to communicate with user interface design and art of coding and I applied it to my second mobile application project I am working on.
