💾☃️ Checkpoint ./bio.html:38505739/2925

--- a/bio.html
+++ b/bio.html
@@ -219,15 +219,16 @@
       </div>
     </div>
       
-      <p> I'm Soin An. An interaction Designer from San Jose.
-
-        My most recent work was with Whos's Down. which is a Real time meet-up Social Media Mobile Application and I designed branding, preview images and icons. I also have experience as a front end website designer at e-commercial start up company in LA. Having responsibility as a front end designer for four years taught me how to balance time and workload and self-taught important skills.
-
-I am currently attending San Jose State University and pursuing Digital Media Design major. I learn how to communicate with user interface design and art of coding and I applied it to my second mobile application project I am working on.
+      <p> I'm Soin An. 
+My passion for digital media design started from Architecture. It may sounds odd but it is true. I have experienced various digital mediums in my artistic journey. From drawing floor plans of buildings to Photoshops. I studied Architecture for 2 years in Los Angeles and human traffic circulation in the building was the most interesting part for me. So I changed my major to Interaction design and I transferred San Jose State University to study digital media design.
 
 I grew up in 3 different countries which is South Korea, Malaysia and United States. I believe diverse experience can be embraced with art. I realized how much I love human-centered design through experience of studying Architecture for two years. The process of understanding user experience was similar to Interaction design.
 
-My second love is 3 cats in my house and authentic food. You might find me wondering for new tastes in Bay Area every weekend.
+I would like to study more in Digital Media Design major especially UI/UX design. I learned how to communicate with user interface design and art of coding and I applied it to my second mobile application project I am working on.
+
+My most recent professional work was with Whos's Down. which is a Real time meet-up Social Media Mobile Application and I designed branding, preview images and icons. I also have experience as a front end website designer at e-commercial start up company in LA. Having responsibility as a front end designer for four years taught me how to balance time and workload and self-taught important skills.
+
+Although I love writing letters and painting with my bare hands, the world will be filled with many digital devices as time passes. And I would love to create the environments where people can easily communicate with others through it. My second love is 3 cats in my house and authentic food. You might find me wondering for new tastes in Bay Area every weekend.
       </p>
        </main>
 
