--- a/bio.html
+++ b/bio.html
@@ -198,6 +198,11 @@
   <body>
     <main role="main" class="container">
       <div class="section">
+         <img
+              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/port3.png?v=1649148365224"
+              alt="portfolio line"
+              width="100%"
+                 />
         <div class="row">
                    <div class="column">
 
