--- a/bio.html
+++ b/bio.html
@@ -218,11 +218,11 @@
            <div class="column">
           <p>
           
-My passion for digital media design started from Architecture. It may sounds odd but it is true. I have experienced various digital mediums in my artistic journey. From drawing floor plans of buildings to Photoshops. I studied Architecture for 2 years in Los Angeles and human traffic circulation in the building was the most interesting part for me. <br/>So I changed my major to Interaction design and I transferred San Jose State University to study digital media design.<br/>
+My passion for UI UX design started from Architecture. It may sounds odd but it is true. I have experienced various digital mediums in my artistic journey. From drawing floor plans of buildings to Photoshops. I studied Architecture for 2 years in Los Angeles and human traffic circulation in the building was the most interesting part for me. <br/>So I changed my major to Interaction design and I transferred San Jose State University to study digital media design.<br/>
 
 I grew up in 3 different countries which is South Korea, Malaysia and United States. I believe diverse experience can be embraced with art. I realized how much I love human-centered design through experience of studying Architecture for two years. The process of understanding user experience was similar to Interaction design.<br/>
 
-I would like to study more in Digital Media Design major especially UI/UX design. I learned how to communicate with user interface design and art of coding and I applied it to my second mobile application project I am working on.<br/>
+            I learned how to communicate with user interface design and art of coding and I applied it to my second mobile application project I am working on.<br/>
 
 My most recent professional work was with Whos's Down. which is a Real time meet-up Social Media Mobile Application and I designed branding, preview images and icons. I also have experience as a front end website designer at e-commercial start up company in LA. Having responsibility as a front end designer for four years taught me how to balance time and workload and self-taught important skills.<br/>
 
