--- a/bio.html
+++ b/bio.html
@@ -26,6 +26,11 @@
       href="https://fonts.googleapis.com/css2?family=Vidaloka&display=swap"
       rel="stylesheet"
     />
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" 
+      rel="stylesheet"
+          />
+    
 
     <!-- Additional Style Rules-->
 
@@ -96,7 +101,12 @@
 
     p {
       font-style: normal;
+      font-family: "Karla", sans-serif;
+      font-weight: 300;
+      text-align: left;
+      font-size: 14px;
     }
+
 
     @media screen and (max-width: 600px) {
       .column {
