--- a/bio.html
+++ b/bio.html
@@ -100,7 +100,7 @@
     }
 
     p {
-      font-style: normal;
+      font-style: bold;
       font-family: "Karla", sans-serif;
       font-weight: 400;
       text-align: left;
