--- a/bio.html
+++ b/bio.html
@@ -247,7 +247,7 @@ Also, my other interests are my 3 cats and authentic food. You might find me won
            <div class="column">
              <p> 🍎. This is a cute and unique way t</p>
              </div>
-</div></div>     
+</div></div>     </div>
       </div>
       
 
