--- a/bio.html
+++ b/bio.html
@@ -230,9 +230,7 @@ My most recent professional work was with Whos's Down. which is a Real-time meet
 
 My current interest is exploring the metaverse. I would love to create environments where people can easily communicate with others through better experiences in the VR world. <br><br>
 
-I grew up in 3 different countries which are South Korea, Malaysia, and the United States. I believe diverse experiences can be embraced with art. The process of understanding user experience was similar to understanding diverse cultures.<br><br>
-
-Also, my other interests are my 3 cats and authentic food. You might find me wondering for new tastes in Bay Area every weekend.</p>
+I grew up in 3 different countries which are South Korea, Malaysia, and the United States. I believe diverse experiences can be embraced with art. The process of understanding user experience was similar to understanding diverse cultures.</p>
             </div></div>
           </div>
         <div class="section">
@@ -240,12 +238,12 @@ Also, my other interests are my 3 cats and authentic food. You might find me won
         <div class="row">
                    <div class="column">
 
-                     <p> 🍎. This is a cute and unique way t</p>
+                     <p> ✨Area of expertise<br><br>UI UX Design<br>UX and VR research<br>Interactive environment design<br></p>
           </div>
           
           <div class="row">
            <div class="column">
-             <p> 🍎. This is a cute and unique way t</p>
+             <p> 🐱Personal interests<br><br>My 3 Cats<br>Authentic Foods<br>Staying at home<br></p>
              </div>
 </div></div>     </div>
       </div>
