--- a/bio.html
+++ b/bio.html
@@ -238,14 +238,14 @@ I grew up in 3 different countries which are South Korea, Malaysia, and the Unit
         <div class="row">
                    <div class="column">
 
-                     <p> ✨Area of expertise<br><br>UI UX Design<br>UX and VR research<br>Interactive environment design<br></p>
-          </div>
+                     <p> ✨Area of Expertise<br><br>UI UX Design<br>UX and VR research<br>Interactive environment design<br></p>
+          </div></div>
           
           <div class="row">
            <div class="column">
-             <p> 🐱Personal interests<br><br>My 3 Cats<br>Authentic Foods<br>Staying at home<br></p>
-             </div>
-</div></div>     </div>
+             <p> 🐱Personal Interests<br><br>My 3 Cats<br>Authentic Foods<br>Staying at home<br></p>
+             </div></div>
+    </div>
       </div>
       
 
