--- a/bio.html
+++ b/bio.html
@@ -241,9 +241,8 @@ I grew up in 3 different countries which are South Korea, Malaysia, and the Unit
                      <p> ✨Area of Expertise<br><br>UI UX Design<br>UX and VR research<br>Interactive environment design<br></p>
           </div></div>
           
-          <div class="row">
            <div class="column">
-             <p> 🐱Personal Interests<br><br>My 3 Cats<br>Authentic Foods<br>Staying at home<br></p>
+             <p> 🐱Personal Interests<br><br>My 3 Cats<br>Authentic Foods<br>Traveling<br></p>
              </div></div>
     </div>
       </div>
