--- a/bio.html
+++ b/bio.html
@@ -243,7 +243,7 @@ I grew up in 3 different countries which are South Korea, Malaysia, and the Unit
           
            <div class="column">
              <p> 🐱Personal Interests<br><br>My 3 Cats<br>Authentic Foods<br>Traveling<br></p>
-             </div></div>
+             </div></div></div>
     </div>
       </div>
       
