--- a/bio.html
+++ b/bio.html
@@ -259,10 +259,7 @@ padding: 25px;
   <body>
     <main role="main" class="container">
       <div class="section">
-         <img
-              src="./resource/port3.png"
-              width="100%"
-                 />
+        <h2>Welcome to my website! Nice to meet you.</h2>
         <div class="row">
                    <div class="column">
 
@@ -276,7 +273,7 @@ padding: 25px;
            <div class="column">
           <p>I'm currently pursuing a BFA degree at San Jose State University, focusing on User Experience in AR and VR. And I will be graduating Spring of 2024.<br><br>
 
-My most recent professional work was with Whos's Down. which is a Real-time meet-up Social Media Mobile Application. I designed with branding, preview images, and icons.<br><br>
+My most recent professional work was with COW which is a Real-time restaurant reveiw social media application. I designed with branding, preview images, and icons.<br><br>
 
 My current interest is exploring the metaverse. I would love to create environments where people can easily communicate with others through better experiences in the VR world. <br><br>
 
@@ -316,8 +313,8 @@ I grew up in 3 different countries which are South Korea, Malaysia, and the Unit
   </body>
    <div class="footer">
         
-           <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing"
-                                                         >Resume!</a></p>
+           <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing">
+                                                         Resume!</a></p>
    
             <a href="mailto:soin.an@sjsu.edu"> <img
                   src="./resource/noun-email-5413032.png"
