--- a/bio.html
+++ b/bio.html
@@ -259,7 +259,7 @@ padding: 25px;
   <body>
     <main role="main" class="container">
       <div class="section">
-        <h2>Welcome to my website! Nice to meet you.</h2><br>
+        <h2>Welcome to my website! Nice to meet you.</h2><br><hr>
         <div class="row">
                    <div class="column">
 
