--- a/bio.html
+++ b/bio.html
@@ -213,7 +213,9 @@ padding: 25px;
     font-weight: normal;
        font-family: "Karla", sans-serif;
 }
-
+ hr {
+  width: 90%;
+}
   </style>
 
   <header>
@@ -259,7 +261,7 @@ padding: 25px;
   <body>
     <main role="main" class="container">
       <div class="section">
-        <h2>Welcome to my website! Nice to meet you.</h2><br><hr>
+        <h2>Welcome to my website! Nice to meet you.</h2><hr><br>
         <div class="row">
                    <div class="column">
 
