--- a/bio.html
+++ b/bio.html
@@ -261,8 +261,8 @@ padding: 25px;
   <body>
     <main role="main" class="container">
       <div class="section">
-        <h2>Welcome to my website! Nice to meet you.</h2><hr><br>
-        <div class="row">
+        <h2>Welcome to my website! Nice to meet you.</h2><br>
+        <div class="row"><hr>
                    <div class="column">
 
             <img
@@ -287,7 +287,7 @@ I grew up in 3 different countries which are South Korea, Malaysia, and the Unit
       </div>
        <div class="section">
           <div class="row">
-            
+            <hr>
           <div class="column">
             <h2>
               Areas of Expertise</h2><p><br>UI/UX Design<br>Adobe Photoshop<br>Adobe Illustrator<br>Adobe Premiere Pro<br>Frontend Website Desgin<br>Interactive Envrionmnet Design<br></p>
