--- a/bio.html
+++ b/bio.html
@@ -262,7 +262,7 @@ padding: 25px;
     <main role="main" class="container">
       <div class="section">
         <h2>Welcome to my website! Nice to meet you.</h2><br>
-        <div class="row"><hr>
+        <div class="row">
                    <div class="column">
 
             <img
